Fix stupid mistake in pom.xml