@@ -145,6 +145,8 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.incubator.concurrent</arg>
                         <arg>--add-exports</arg>
                         <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                         <arg>--add-exports</arg>
